--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	
+	<div class="yellow_big_circle">
+		<div class="red_inside_circle">
+			<div class="blue_inside_block">
+				
+			</div>
+		</div>
+	</div>
+	<div class="blue_big_circle">
+		<div class="yellow_inside_circle">
+			<div class="red_inside">
+				
+			</div>
+		</div>
+	</div>
 </body>
 </html>
